platform/dashboard/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard
  name: dashboard
spec:
  ports:
  - name: 8080-8080
    nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dashboard
  type: NodePort
status:
  loadBalancer: {}
